--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             createFish(
                     Math.floor(Math.random() * app.screen.width),
                     Math.floor(Math.random() * app.screen.height),
-                    news_data[1],
+                    null,
                     0.5,
                     kujira,
             );
