--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             const sacabam = PIXI.Texture.from('./kodai_sacabambaspis.png');
             const mijinko = PIXI.Texture.from('./mushi_mijinko.png');
 
-            /*for (let i = 0; i < data.length; i++) {
+            for (let i = 0; i < data.length; i++) {
                 let texture = null;
                 if (data[i]["level"] == 0) {
                     texture = kujira;
@@ -59,18 +59,11 @@
                     Math.floor(Math.random() * app.screen.width),
                     Math.floor(Math.random() * app.screen.height),
                     data[i]["Title"],
+                    data[1]["URL"],
                     0.5,
                     texture,
                 );
-            }*/
-            createFish(
-                    Math.floor(Math.random() * app.screen.width),
-                    Math.floor(Math.random() * app.screen.height),
-                    data[1]["Title"],
-                    data[1]["URL"],
-                    0.5,
-                    kujira,
-            )
+            }
 
             function createFish(x, y, name, url, scale, texture) {
                 // create our little fish friend..
