--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 
 <body>
     <script>
-        let user = window.prompt("ユーザー名を入力してください(デモ用)", "");
+        let user = window.prompt("ユーザー名を入力してください(デモ用)", ""); //デモ用にユーザ名入力欄を実装。本番ではハッシュ値をcookieに保存してユーザを識別したい。
         if (user == "") {
-            user = "default";
+            user = "default"; //入力が無ければデフォルトとする
         }
-        let uid = {"UID" : user}
+        let uid = {"UID" : user} // jsonに整形
         
-        const app = new PIXI.Application({ background: '#1099bb', resizeTo: window });
-        document.body.appendChild(app.view);
+        const app = new PIXI.Application({ background: '#1099bb', resizeTo: window });  //pixi.jsのウィンドウ生成
+        document.body.appendChild(app.view); //ウィンドウを貼り付け(canvas)
 
         console.log(uid);
-        fetch('http://192.168.64.2:8000/News', {
-            body: JSON.stringify(uid)
+        fetch('http://192.168.64.2:8000/News', {  //バックエンド呼び出し
+            body: JSON.stringify(uid)  //jsonを含めて送信
         })
             .then((response) => response.json())
             .then((data) => {
 
-            const news_data = ["【重要】新曲リリース＆生放送決定！",
+            const news_data = ["【重要】新曲リリース＆生放送決定！", //テスト用のデータ。多分今はもう使えないけど取っておく
                             "ライブイベント開催のお知らせ",
                             "新アルバム『夢幻の旅』発売決定！",
                             "生放送のお知らせ！",
@@ -49,15 +49,15 @@
                             "「光」ミュージックビデオ公開！"]
 
             // create a texture from an image path
-            const kujira = PIXI.Texture.from('./shinkai_makkoukujira.png');
+            const kujira = PIXI.Texture.from('./shinkai_makkoukujira.png'); //画像を読み込む。
             const kobanzame = PIXI.Texture.from('./fish_same_kobanzame.png');
             const sacabam = PIXI.Texture.from('./kodai_sacabambaspis.png');
             const mijinko = PIXI.Texture.from('./mushi_mijinko.png');
 
-            for (let i = 0; i < data.length; i++) {
+            for (let i = 0; i < data.length; i++) { //受け取ったデータでスプライトを作成
                 let texture = null;
                 let size = 0.5;
-                if (data[i]["level"] == 0) {
+                if (data[i]["level"] == 0) {  //レベルに合わせて割り当てる画像を決める
                     texture = kujira;
                     size = 0.8;
                 } else if (data[i]["level"] == 1) {
@@ -70,13 +70,13 @@
                     texture = mijinko;
                     size = 0.2;
                 }
-                createFish(
-                    Math.floor(Math.random() * app.screen.width),
+                createFish( //魚を作成する関数を呼び出し
+                    Math.floor(Math.random() * app.screen.width), //場所はランダム
                     Math.floor(Math.random() * app.screen.height),
-                    data[i]["Title"],
-                    data[i]["URL"],
-                    size,
-                    texture,
+                    data[i]["Title"], //記事のタイトルをnameとして渡す
+                    data[i]["URL"], //記事のリンクをurlとして渡す
+                    size, //大きさをscaleとして渡す
+                    texture, //テクスチャをtextureとして渡す
                 );
             }
 
@@ -86,30 +86,30 @@
                 const style = new PIXI.TextStyle({
                     fontSize: 18
                 });
-                fish.text = new PIXI.Text(name, style);
+                fish.text = new PIXI.Text(name, style); //魚の下に表示する文字を作成
                 fish.text.fontSize = 18;
 
                 // enable the fish to be interactive... this will allow it to respond to mouse and touch events
-                fish.interactive = true;
+                fish.interactive = true; //これでマウスで動かせるようになる
 
                 // this button mode will mean the hand cursor appears when you roll over the fish with your mouse
                 fish.cursor = 'pointer';
 
                 // center the fish's anchor point
-                fish.anchor.set(0.5);
+                fish.anchor.set(0.5); //魚の中央を座標の指定場所に
 
                 // make it a bit bigger, so it's easier to grab
-                fish.scale.set(scale);
-                fish.text.anchor.set(0.5, -1*scale*8);
+                fish.scale.set(scale); //大きさを指定
+                fish.text.anchor.set(0.5, -1*scale*8); //魚の文字の場所を計算、指定
 
                 // setup events for mouse + touch using
                 // the pointer events
-                fish.on('pointerdown', onDragStart, fish);
+                fish.on('pointerdown', onDragStart, fish); //各種条件で関数を呼び出し
                 fish.on('pointerover', onMouseOver, fish);
                 fish.on('pointerout', onMouseOut, fish);
 
 
-                // move the sprite to its designated position
+                // 各種情報を指定
                 fish.x = x;
                 fish.y = y;
                 //fish.alpha = (Math.sin(10 * fish.x / app.screen.width / Math.PI) + Math.sin(10 * fish.y / app.screen.height / Math.PI)) / 2;
@@ -120,7 +120,7 @@
                 fish.url = url;
 
                 // add it to the stage
-                app.stage.addChild(fish);
+                app.stage.addChild(fish); //魚とテキストをcanvasに追加
                 app.stage.addChild(fish.text);
 
             }
@@ -131,10 +131,10 @@
 
             app.stage.interactive = true;
             app.stage.hitArea = app.screen;
-            app.stage.on('pointerup', onDragEnd);
+            app.stage.on('pointerup', onDragEnd); //ポインターが画面外に移動してもドラッグ終了処理をする
             app.stage.on('pointerupoutside', onDragEnd);
 
-            function onDragMove(event) {
+            function onDragMove(event) { //マウスが動いたときに、魚をつかんでいたら、マウスにくっついて移動する
                 if (dragTarget) {
                     dragTarget.parent.toLocal(event.global, null, dragTarget.position);
                     //console.log(dragTarget.position);
@@ -142,37 +142,37 @@
                 }
             }
 
-            function onDragStart() {
+            function onDragStart() { // クリックしたとき
                 // store a reference to the data
                 // the reason for this is because of multitouch
                 // we want to track the movement of this particular touch
                 // this.data = event.data;
-                this.alpha = 0.5;
-                dragTarget = this;
+                this.alpha = 0.5;  //色を薄くする
+                dragTarget = this; //このオブジェクトをdragTargetとして指定
                 Target_pos =  Object.assign({}, this.position);
                 console.log(Target_pos);
-                description_flag = false;
+                description_flag = false; //クリックしている間は説明を消す
                 app.stage.on('pointermove', onDragMove);
             }
 
-            function onDragEnd() {
+            function onDragEnd() {　//魚を離したとき
                 if (dragTarget) {
                     app.stage.off('pointermove', onDragMove);
                     console.log(app.screen.width);
                     //dragTarget.alpha = (Math.sin(10*dragTarget.x / app.screen.width / Math.PI) + Math.sin(10 * dragTarget.y / app.screen.height / Math.PI))/2;
-                    dragTarget.alpha = 1;
+                    dragTarget.alpha = 1; //透明度を戻す
 
 
-                    if(Target_pos._x === dragTarget.position.x && Target_pos._y === dragTarget.position.y) {
-                        location = dragTarget.url;
+                    if(Target_pos._x === dragTarget.position.x && Target_pos._y === dragTarget.position.y) { //クリックしてから離すまでに動かなかったとき
+                        location = dragTarget.url; //ページを移動する
                     }
-                    dragTarget.text.position = dragTarget.position;
+                    dragTarget.text.position = dragTarget.position; // テキストもスプライトに合わせて移動
                     dragTarget = null;
                     init_pos = null;
                     description_flag = true;
                 }
             }
-            function onMouseOver() {
+            function onMouseOver() { // スプライトにマウスが乗った時、説明文を出す(今はlogだけ)
                 this.isOver = true;
                 if (this.isdown) {
                     return;
@@ -181,7 +181,7 @@
                     console.log("show description:"+this.name);
                 }
             }
-            function onMouseOut() {
+            function onMouseOut() { //スプライトからマウスが外れた時、説明文を消す(今はlogだけ)
                 this.isOver = false;
                 if (this.isdown) {
                     return;
