--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         document.body.appendChild(app.view); //ウィンドウを貼り付け(canvas)
 
         console.log(uid);
-        fetch('http://192.168.64.2:8000/News', {  //バックエンド呼び出し
+         fetch('http://192.168.64.2:8000/News', {  //バックエンド呼び出し
             method: 'POST',
             headers: {
                 'Content-Type':'application/json'
             },
             body: JSON.stringify(uid),  //jsonを含めて送信
         })
-            .then((response) => response.json())
-            .then((data) => {
+        .then((response) => response.json())
+        .then((data) => {
 
             const news_data = ["【重要】新曲リリース＆生放送決定！", //テスト用のデータ。多分今はもう使えないけど取っておく
                             "ライブイベント開催のお知らせ",
@@ -79,12 +79,13 @@
                     Math.floor(Math.random() * app.screen.height),
                     data[i]["Title"], //記事のタイトルをnameとして渡す
                     data[i]["URL"], //記事のリンクをurlとして渡す
+                    data[i]["Hash"],
                     size, //大きさをscaleとして渡す
                     texture, //テクスチャをtextureとして渡す
                 );
             }
 
-            function createFish(x, y, name, url, scale, texture) {
+            function createFish(x, y, name, url, hash, scale, texture) {
                 // create our little fish friend..
                 const fish = new PIXI.Sprite(texture);
                 const style = new PIXI.TextStyle({
@@ -122,6 +123,7 @@
                 fish.text.y = y;
                 fish.name = name;
                 fish.url = url;
+                fish.hash = hash;
 
                 // add it to the stage
                 app.stage.addChild(fish); //魚とテキストをcanvasに追加
@@ -165,10 +167,22 @@
                     console.log(app.screen.width);
                     //dragTarget.alpha = (Math.sin(10*dragTarget.x / app.screen.width / Math.PI) + Math.sin(10 * dragTarget.y / app.screen.height / Math.PI))/2;
                     dragTarget.alpha = 1; //透明度を戻す
+                    const location_move = (url) => {
+                        return () => {
+                            location = url;
+                        }
+                    }
+                    const move_func = location_move(dragTarget.url)
 
 
                     if(Target_pos._x === dragTarget.position.x && Target_pos._y === dragTarget.position.y) { //クリックしてから離すまでに動かなかったとき
-                        location = dragTarget.url; //ページを移動する
+                        fetch('http://192.168.64.2:8000/Register', {  //バックエンド呼び出し
+                            method: 'POST',
+                            headers: {
+                                'Content-Type':'application/json'
+                            },
+                            body: JSON.stringify({'UID':uid['UID'] ,'HASH':dragTarget.hash}),  //jsonを含めて送信
+                        }).then(move_func())//ページを移動する
                     }
                     dragTarget.text.position = dragTarget.position; // テキストもスプライトに合わせて移動
                     dragTarget = null;
@@ -183,6 +197,7 @@
                 }
                 if(description_flag) {
                     console.log("show description:"+this.name);
+                    console.log("show description:"+this.hash);
                 }
             }
             function onMouseOut() { //スプライトからマウスが外れた時、説明文を消す(今はlogだけ)
@@ -192,6 +207,7 @@
                 }
                 if (description_flag) {
                     console.log("close description:"+this.name);
+                    console.log("close description:"+this.hash);
                 }
             }
         });
