--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
                 // make it a bit bigger, so it's easier to grab
                 fish.scale.set(scale); //大きさを指定
-                fish.text.anchor.set(0.5, -1*scale); //魚の文字の場所を計算、指定
+                fish.text.anchor.set(0.5, 1); //魚の文字の場所を計算、指定
 
                 // setup events for mouse + touch using
                 // the pointer events
